# YSerialPort

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/apk/: output.json  串口测试_v2.0.0_2_2019-12-13_16-49-47_release.apk  串口测试_v2.0.4_4_2019-12-19_09-56-23_release.apk  串口测试_v2.0.5_5_2020-12-31_12-16-04_release.apk  串口测试_v2.0.6_6_2020-01-03_11-36-53_release.apk  串口测试_v2.0.7_7_2020-01-07_11-34-48_release.apk  串口测试_v2.0.9_9_2020-01-14_11-06-13_release.apk
app/doc/: yujingtest.jks
app/libs/: hnUtils1.0.0.aar  hnutils-release-2021-02-04.aar  hnutils-release.aar
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bt_click.xml  item_click.xml  set_selector.xml
app/src/main/res/layout/: activity_main.xml  activity_my_main.xml  activity_send.xml  activity_send_file.xml  activity_serialport_to_wifi.xml  activity_set.xml  activity_test.xml  activity_test_all.xml  activity_zm703_cpu.xml  activity_zm703_m1.xml  main.xml  sending_words.xml  view_set.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
app/src/main/res_screen/values-sw1080dp/: dimens.xml
app/src/main/res_screen/values-sw320dp/: dimens.xml
app/src/main/res_screen/values-sw332dp/: dimens.xml
app/src/main/res_screen/values-sw345dp/: dimens.xml
app/src/main/res_screen/values-sw360dp/: dimens.xml
app/src/main/res_screen/values-sw375dp/: dimens.xml
app/src/main/res_screen/values-sw392dp/: dimens.xml
app/src/main/res_screen/values-sw411dp/: dimens.xml
app/src/main/res_screen/values-sw432dp/: dimens.xml
app/src/main/res_screen/values-sw454dp/: dimens.xml
app/src/main/res_screen/values-sw480dp/: dimens.xml
app/src/main/res_screen/values-sw508dp/: dimens.xml
gradle/wrapper/: gradle-wrapper.properties
yserialport/: .gitignore  CMakeLists.txt  bintray.gradle  build.gradle  toJar.gradle
yserialport/src/androidTest/java/com/yujing/yserialport/: ExampleInstrumentedTest.java
yserialport/src/main/: AndroidManifest.xml
yserialport/src/main/cpp/: YSerialPort.c  YSerialPort.h  gen_YSerialPort_h.sh
yserialport/src/main/java/com/yujing/serialport/: SerialPort.java  SerialPortFinder.java
yserialport/src/main/java/com/yujing/yserialport/: DataListener.java  InputStreamReadListener.java  ThreadMode.kt  Utils.java  YBytes.java  YListener.java  YReadInputStream.java  YSerialPort.java
yserialport/src/main/res/values/: strings.xml
yserialport/src/test/java/com/yujing/yserialport/: ExampleUnitTest.java
(+55 files in other folders)
